# radio-gofestivals

./: .env.example  .env.production.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  LICENSE  MEMO-LOCAL-SETUP.md  README.en.md  README.md  docker-compose.prod.yml  docker-compose.yml
apps/api/: .dockerignore  Dockerfile  Dockerfile.dev  pyproject.toml
apps/api/alembic/: env.py
apps/api/alembic/versions/: 0001_initial_schema.py  0002_add_duplicate_station_status.py  0003_add_radio_browser_fields.py  0004_add_last_error_to_stations.py  0005_create_station_streams.py  0006_add_inactive_to_station_status.py  0007_drop_legacy_stream_columns.py  0008_create_clickcount_history.py  0009_extend_curation_log_actions.py  0010_create_admin_jobs.py  0011_add_change_primary_stream_action.py  0012_users_mvp.py  0013_add_hidden_column_to_stations.py  0014_hide_spam_stations_batch_1.py  0015_create_station_plays.py  0016_create_station_plays_daily.py  0017_create_recommendation_tables.py  0018_create_user_refresh_tokens.py  0019_create_email_verification_tokens.py  0020_stream_browser_playability.py
apps/api/app/: main.py
apps/api/app/api/: deps.py
apps/api/app/api/v1/: __init__.py  genres.py  recs.py  stations.py
apps/api/app/core/: config.py  db.py  logging.py  redis.py  security.py
apps/api/app/models/: __init__.py  admin.py  admin_job.py  genre.py  station.py  station_clickcount_history.py  station_stream.py  user.py
apps/api/app/repos/: admin_jobs.py  admins.py  email_verification_tokens.py  genres.py  password_reset_tokens.py  recommendations.py  station_plays.py  stations.py  user_favorites.py  user_refresh_tokens.py  user_votes.py  users.py
apps/api/app/schemas/: admin.py  admin_dashboard.py  admin_jobs.py  admin_streams.py  genre.py  rec.py  station.py  station_play.py  user.py
apps/api/app/services/: email_resend.py  email_verification.py  genres.py  password_reset.py  rate_limit.py  recommendations.py  stations.py  user_auth.py
apps/api/app/services/admin/: auth.py  dashboard_stats.py  genres.py  operations.py  operations_catalog.py  stations.py  stream_ops.py
apps/api/tests/: conftest.py  test_health.py
apps/api/tests/integration/: test_genres.py  test_nearby.py  test_pool_no_leak.py  test_rate_limit.py  test_recommendations.py  test_station_detail.py  test_station_plays.py  test_station_suggest.py  test_stations.py  test_stations_excludes_duplicates.py  test_stations_facets.py  test_stations_featured.py  test_stations_repo_hidden.py  test_stream_redirect.py  test_users_plays.py
apps/api/tests/integration/admin/: conftest.py  test_auth.py  test_bulk_status.py  test_dashboard.py  test_genres_crud.py  test_operations.py  test_stations_curate.py  test_stations_detail.py  test_stations_list.py  test_stations_pending.py  test_stations_update.py  test_streams.py
apps/api/tests/unit/: test_apply_genre_cap.py  test_config.py  test_operations_catalog.py
docs/: admin-plan.md  (+3 more)
(+229 files in other folders)
